# maxion-mcp-gateway

./: .gitignore  .mcpbignore  Cargo.toml  README.md  Run-Transparent.ps1  Start-MaxionEngine.bat  admin_dashboard.html  admin_emulator.js  admin_host.js  ai-plugin.json  app_main.js  apply_patches.js  cpu_stress.js  create_mock_user.js  fix_host.js  fix_icon.ps1  fix_sync.js  generate_shortcut.js  launch-dashboard.bat  lifetime_metrics.json  manifest.json  master_boot.js  mcp.json  mcp_wrapper.js  openapi.json  package-lock.json  package.json  patch_sync.js  patch_theme.js  remove_matrix.js  run_admin_emulator_admin.bat  run_emulator_admin.bat  simulate_agent.js  smithery.yaml  start-maxion-cores.bat  subscriber_dashboard.html  subscriber_emulator.js  subscriber_host.js  telemetry_server.js  test_waterfall.js
public/.well-known/mcp/: server-card.json
src/: auth.ts  index.ts  main.rs
