[package]
name = "maxion_windows_cores"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ngrok = "0.14"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
anyhow = "1.0"
serde_json = "1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
